WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61835
Web Inspector: [JSC] JSLock ASSERTs Seen Under eventListenerHandlerBody
https://bugs.webkit.org/show_bug.cgi?id=61835
Summary
Web Inspector: [JSC] JSLock ASSERTs Seen Under eventListenerHandlerBody
Joseph Pecoraro
Reported
2011-05-31 20:46:09 PDT
A few of the ASSERTs. I only saw this with the Interpreter and not the JIT. But it might as well be fixed. ASSERTION FAILED: JSLock::lockCount() > 0 Source/JavaScriptCore/runtime/JSCell.h(399) : void* JSC::Heap::allocate(size_t) 1 JSC::Heap::allocate(unsigned long) 2 JSC::JSCell::operator new(unsigned long, JSC::JSGlobalData*) 3 JSC::jsNontrivialString(JSC::JSGlobalData*, JSC::UString const&) 4 JSC::jsNontrivialString(JSC::ExecState*, JSC::UString const&) 5 JSC::JSValue JSC::jsMakeNontrivialString<char const*, JSC::UString, char const*, JSC::UString, char const*, JSC::UString>(JSC::ExecState*, char const*, JSC::UString, char const*, JSC::UString, char const*, JSC::UString) 6 _ZN3JSCL25functionProtoFuncToStringEPNS_9ExecStateE 7 JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 8 JSC::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 9 _ZN3JSCL24callDefaultValueFunctionEPNS_9ExecStateEPKNS_8JSObjectERKNS_10IdentifierE 10 JSC::JSObject::defaultValue(JSC::ExecState*, JSC::PreferredPrimitiveType) const 11 JSC::JSObject::toPrimitive(JSC::ExecState*, JSC::PreferredPrimitiveType) const 12 JSC::JSObject::toString(JSC::ExecState*) const 13 WebCore::eventListenerHandlerBody(WebCore::Document*, WebCore::EventListener*) 14 WebCore::InspectorDOMAgent::buildObjectForEventListener(WebCore::RegisteredEventListener const&, WTF::AtomicString const&, WebCore::Node*) 15 WebCore::InspectorDOMAgent::getEventListenersForNode(WTF::String*, int, WTF::RefPtr<WebCore::InspectorArray>*) ASSERTION FAILED: JSLock::lockCount() > 0 JSCell.h(399) : void* JSC::Heap::allocate(size_t) 1 JSC::Heap::allocate(unsigned long) 2 JSC::JSCell::operator new(unsigned long, JSC::JSGlobalData*) 3 JSC::jsNontrivialString(JSC::JSGlobalData*, JSC::UString const&) 4 JSC::jsNontrivialString(JSC::ExecState*, JSC::UString const&) 5 WebCore::JSLazyEventListener::initializeJSFunction(WebCore::ScriptExecutionContext*) const 6 WebCore::JSEventListener::jsFunction(WebCore::ScriptExecutionContext*) const 7 WebCore::eventListenerHandlerBody(WebCore::Document*, WebCore::EventListener*) 8 WebCore::InspectorDOMAgent::buildObjectForEventListener(WebCore::RegisteredEventListener const&, WTF::AtomicString const&, WebCore::Node*) 9 WebCore::InspectorDOMAgent::getEventListenersForNode(WTF::String*, int, WTF::RefPtr<WebCore::InspectorArray>*) Patch to follow.
Attachments
[PATCH] Add JSLock Silence Assertions
(1.35 KB, patch)
2011-05-31 20:48 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2011-05-31 20:48:00 PDT
Created
attachment 95539
[details]
[PATCH] Add JSLock Silence Assertions
WebKit Commit Bot
Comment 2
2011-06-01 04:18:11 PDT
Comment on
attachment 95539
[details]
[PATCH] Add JSLock Silence Assertions Clearing flags on attachment: 95539 Committed
r87793
: <
http://trac.webkit.org/changeset/87793
>
WebKit Commit Bot
Comment 3
2011-06-01 04:18:15 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 4
2011-06-01 06:02:02 PDT
The commit-queue encountered the following flaky tests while processing
attachment 95539
[details]
: inspector/debugger/debugger-scripts.html
bug 59921
(authors:
pfeldman@chromium.org
and
podivilov@chromium.org
) http/tests/misc/favicon-loads-with-icon-loading-override.html
bug 58412
(author:
alice.liu@apple.com
) The commit-queue is continuing to process your patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug