2011-06-01  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by Pavel Feldman.

        Web Inspector: [JSC] JSLock ASSERTs Seen Under eventListenerHandlerBody
        https://bugs.webkit.org/show_bug.cgi?id=61835

        Add a JSLock call before possible allocations in jsFunction and toString.

        * bindings/js/ScriptEventListener.cpp:
        (WebCore::eventListenerHandlerBody):

git-svn-id: svn://svn.chromium.org/blink/trunk@87793 bbb929c8-8fbe-4397-9dbb-9b2b20218538