third_party/WebKit/Source/WebCore/bindings/js/ScriptEventListener.cpp
@@ -100,6 +100,7 @@ String eventListenerHandlerBody(Document* document, EventListener* eventListener
     const JSEventListener* jsListener = JSEventListener::cast(eventListener);
     if (!jsListener)
         return "";
+    JSLock lock(SilenceAssertionsOnly);
     JSC::JSObject* jsFunction = jsListener->jsFunction(document);
     if (!jsFunction)
         return "";
